deploy/k8s/11-drone/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  namespace: devops
  labels:
    app: drone-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-server
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      automountServiceAccountToken: false
      serviceAccountName: drone-server
      containers:
        - name: drone-server
          image: "drone/drone:2.12.1"
          resources: {}
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: drone-server-data
              mountPath: /data
              subPath: ""
      volumes:
        - name: drone-server-data
          persistentVolumeClaim:
            claimName: pvc-iscsi-drone-server-data

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner-kube
  namespace: devops
  labels:
    app: drone-runner-kube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-runner-kube
  template:
    metadata:
      labels:
        app: drone-runner-kube
    spec:
      serviceAccountName: drone-runner-kube
      terminationGracePeriodSeconds: 3600
      containers:
        - name: drone-runner-kube
          image: "drone/drone-runner-kube:1.0.0-rc.3"
          resources: {}
          ports:
            - containerPort: 3000
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: drone-runner-kube
  namespace: devops
  labels:
    app: drone-runner-kube
spec:
  selector:
    app: drone-runner-kube
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000

---
kind: Service
apiVersion: v1
metadata:
  name: drone-server-svc
  namespace: devops
  labels:
    app: drone-server
spec:
  selector:
    app: drone-server
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: drone-server
  namespace: devops
  labels:
    app: drone-server
spec:
  ingressClassName: nginx-public
  rules:
    - host: "drone.theautomation.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drone-server-svc
                port:
                  number: 8080
  tls:
    - hosts:
        - drone.theautomation.nl
      secretName: cloudflare-tls
